# brf-lightning

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: fit_base.yaml
configs/ecg/: ecg_brf.yaml
src/brf_lightning/: __init__.py  defaults.py  train.py
src/brf_lightning/data/: __init__.py  ecg.py
src/brf_lightning/models/: __init__.py  ecg_classifier.py
src/brf_lightning/utils/: cli.py
