[project]
name = "brf-lightning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Keno Teppris", email = "keno.teppris@th-luebeck.de" }
]
requires-python = ">=3.12"
dependencies = [
    "brf-snn",
    "jsonargparse[signatures]>=4.27.7",
    "lightning>=2.5.1.post0",
    "mlflow>=2.22.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
brf-lightning = "brf_lightning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
brf-snn = { git = "https://github.com/kteppris/brf-neurons.git" }
